Fix overflow of long entries in home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ h2              { font-size: 1.2em; }
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
 .entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
+.entries li     { margin: 0.8em 1.2em; word-wrap: break-word; }
 .entries li h2  { margin-left: -1em; }
 .add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
 .add-entry dl   { font-weight: bold; }
